--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@include mat.core();
+
+$custom-app-primary: mat.define-palette(mat.$blue-palette);
+$custom-app-secondary: mat.define-palette(mat.$indigo-palette, A200, A400, 700);
+$custom-app-warning: mat.define-palette(mat.$red-palette);
+
+$custom-app-theme: mat.define-light-theme((
+ color: (
+   primary: $custom-app-primary,
+   secondary: $custom-app-secondary,
+   accent: $custom-app-warning
+ ),
+
+));
+
+@include mat.all-component-themes($custom-app-theme);
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
